k8/frontend.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels: { service: frontend }
spec:
  selector: { service: frontend }
  ports: [{ port: 80, targetPort: 80 }]
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels: { service: frontend }
spec:
  replicas: 1
  selector: { matchLabels: { service: frontend } }
  template:
    metadata: { labels: { service: frontend } }
    spec:
      # imagePullSecrets: [{ name: dockerconfigjson-github-com }] # If the image was private on ghcr.io (consult 1myears/totus or 1myears/extensa-deploy)
      restartPolicy: Always
      containers:
        - name: frontend
          image: ghcr.io/jblew/clampfit-exporter-frontend:1.6.0
          ports: [{ containerPort: 80 }]
