k8/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: public
    # Ingress class must be "public" instead of "nginx" because microk8s ingress is created with argument --ingress-class=public
    # Explanation: https://stackoverflow.com/questions/54506269/simple-ingress-from-host-with-microk8s
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/rewrite-target: "/$1"
    nginx.ingress.kubernetes.io/configuration-snippet: |
        location /metrics {
          deny all;
          return 403;
        }
  name: clampfit-exporter-ingress
spec:
  rules:
    - host: clamper.jblew.pl
      http:
        paths:
          - path: "/api/?(.*)"
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 80
          - path: "/((?!api).*)"
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
  tls:
    - hosts:
        - clamper.jblew.pl
      secretName: clampfit-exporter-tls6
